fix: z-index

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -513,6 +513,7 @@ body {
 .react-pdf__Page__textContent {
   height: 100vh !important;
   width: auto !important;
+  z-index: 0;
 }
 
 .react-pdf__Page__annotations {
